vpc.tf
# Creating VPC
resource "aws_vpc" "vpc" {
  cidr_block              = var.vpc_cidr
  instance_tenancy        = "default"
  enable_dns_hostnames    = true

  tags = {
    Name = "dev vpc"
  }
}

# creating internet gateway and attaching  to the vpc
resource "aws_internet_gateway" "internet_gateway" {
  vpc_id   = aws_vpc.vpc.id

  tags      = {
    Name   = "dev internet gateway"
  }
  
}

#create public subnet in az1
resource "aws_subnet" "public_subnet_az1" {
    vpc_id                  = aws_vpc.vpc.id
    cidr_block              = var.public_subnet_az1_cidr
    availability_zone       = "us-east-2a"
    map_public_ip_on_launch = true

    tags = {
      Names = "public subnet in az1"
    }

  
}

#create public subnet in az1
resource "aws_subnet" "public_subnet_az2" {
    vpc_id                  = aws_vpc.vpc.id
    cidr_block              = var.public_subnet_az2_cidr
    availability_zone       = "us-east-2b"
    map_public_ip_on_launch = true

    tags = {
      Names = "public subnet in az2"
    }

  
}

#create route table and add public route
resource "aws_route_table" "public_route_table" {
  vpc_id = aws_vpc.vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.internet_gateway.id
  }

  tags = {
    Name = "public route table"
  }
}


#associate public subnet az1 to public route table
resource "aws_route_table_association" "public_subnet_az1_route" {
  subnet_id = aws_subnet.public_subnet_az1.id
  route_table_id = aws_route_table.public_route_table.id
  
}

#associate public subnet az2 to public route table
resource "aws_route_table_association" "public_subnet_az2_route" {
  subnet_id = aws_subnet.public_subnet_az2.id
  route_table_id = aws_route_table.public_route_table.id
  
}

#create private subnet in az1
resource "aws_subnet" "private_app_subnet_az1" {
    vpc_id                  = aws_vpc.vpc.id
    cidr_block              = var.private_app_subnet_az1_cidr
    availability_zone       = "us-east-2a"
    map_public_ip_on_launch = false

    tags = {
      Names = "private subnet in az1"
    }
}

#create private subnet in az2
resource "aws_subnet" "private_subnet_az2" {
    vpc_id                  = aws_vpc.vpc.id
    cidr_block              = var.private_app_subnet_az2_cidr
    availability_zone       = "us-east-2b"
    map_public_ip_on_launch = false

    tags = {
      Names = "private app subnet in az2"
    }
}

#create private data subnet in az1
resource "aws_subnet" "private_data_subnet_az1" {
    vpc_id                  = aws_vpc.vpc.id
    cidr_block              = var.private_data_subnet_az1_cidr
    availability_zone       = "us-east-2a"
    map_public_ip_on_launch = false

    tags = {
      Names = "private data  subnet in az1"
    }
}

#create private data subnet in az2
resource "aws_subnet" "private_data_subnet_az2" {
    vpc_id                  = aws_vpc.vpc.id
    cidr_block              = var.private_data_subnet_az2_cidr
    availability_zone       = "us-east-2b"
    map_public_ip_on_launch = false

    tags = {
      Names = "private data subnet in az2"
    }
}
